--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = redis_timeseries_manager
-version = 1.0.12
+version = 2.0
 author = Ahmad Azizi
 author_email = activepost@gmail.com
 description = RedisTimeseriesManager is a redis timeseries management system that enhance redis timeseries with features including multi-line data, built-in timeframes, data classifiers and convenient data accessors.
@@ -22,6 +22,7 @@ python_requires = >=3.6
 include_package_data = True
 install_requires =
     redis >=4.0
+    pandas >=1
 
 [options.packages.find]
 where = src
